# remove-background

./: .gitignore  README.md  config.example.toml  pyproject.toml  pytest.ini
.github/workflows/: docs.yml-notused  test.yml
docker/: Dockerfile  Dockerfile-streamlit  build_test.bat  docker-compose.yml
scripts/: code_coverage.py  document.py
scripts/linux/: run_app.sh
scripts/win/: docs.bat  launch.bat
src/rmbg/: __init__.py  __main__.py  cli.py  cli_app.py  core.py  gui.py
src/template_python/: __init__.py  llm.py  paths.py
src/template_python/cryptography/: __init__.py  fernet.py
src/template_python/notify/: Gotify.py
src/template_python/utils/: __init__.py  config_parser.py  credentials.py  decorators.py  logger.py
src/tests/: test_cli.py  test_core.py
src/tests/utils/: test_logging.py
